--- a/src/styles.less
+++ b/src/styles.less
@@ -8,10 +8,36 @@ body {
 }
 .container {
   border: 1px solid rgb(210, 210, 210);
+  border-radius: 6px;
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
   margin: 16px 8px;
   padding: 16px;
   background-color: white;
+}
+.container.form {
+  display: flex;
+  align-items: baseline;
+
+  @media (max-width: 650px) {
+    flex-direction: column;
+  }
+
+  .form-group {
+    padding: 0 24px 0 24px;
+    display: flex;
+    flex-direction: column;
+
+    &.submit {
+      flex: 2;
+      align-items: flex-start;
+    }
+    &.inputs {
+      flex: 2;
+    }
+    &.checkboxes {
+      flex: 1;
+    }
+  }
 }
 a {
   font-size: 0.75em;
@@ -22,15 +48,18 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-h1, h2, h3 {
+h1, h2, h3, h4 {
   color: crimson;
 }
-form h2 {
-  color: darkblue;
+form {
+  h2, h4, h4 {
+    color: darkblue;
+  }
 }
 label {
-  display: block;
+  display: flex;
   margin-bottom: 16px;
+  justify-content: space-between;
 }
 input[type=text], select {
   height: 1.5rem;
@@ -39,7 +68,7 @@ button {
   color: crimson;
   background-color: white;
   height: 2rem;
-  width: 4rem;
+  width: 6rem;
   border-radius: 8px;
   border: 1px solid crimson;
 }
