reorganize a bit, update deps

--- a/src/styles.less
+++ b/src/styles.less
@@ -71,4 +71,10 @@ button {
   width: 6rem;
   border-radius: 8px;
   border: 1px solid crimson;
+
+  &:disabled {
+    cursor: not-allowed;
+    color: darkgray;
+    border-color: darkgray;;
+  }
 }
