--- a/src/styles.less
+++ b/src/styles.less
@@ -5,76 +5,48 @@ body {
   background-color: rgb(244, 244, 244);
   color: rgb(65, 75, 60);
   font-family: 'Bitter', serif;
+  padding: 32px;
 }
 .container {
   border: 1px solid rgb(210, 210, 210);
-  border-radius: 6px;
+  border-radius: 4px;
   box-shadow: 0px 1px 6px -2px rgb(128, 127, 127);
-  margin: 16px 8px;
-  padding: 16px;
+  padding: 32px;
   background-color: white;
-}
-.container.form {
-  display: flex;
-  align-items: baseline;
-
-  @media (max-width: 650px) {
-    flex-direction: column;
-  }
-
-  .form-group {
-    padding: 0 24px 0 24px;
-    display: flex;
-    flex-direction: column;
-
-    &.submit {
-      flex: 2;
-      align-items: flex-start;
-    }
-    &.inputs {
-      flex: 2;
-    }
-    &.checkboxes {
-      flex: 1;
-    }
-  }
-}
-a {
-  font-size: 0.75em;
-}
-header {
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
+  margin-bottom: 24px;
 }
 h1, h2, h3, h4 {
-  color: crimson;
+  color: royalblue;
 }
-form {
-  h2, h4, h4 {
-    color: darkblue;
-  }
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+h2 {
+  font-size: 1.2rem;
+  margin-bottom: 1.2rem;
 }
 label {
   display: flex;
-  margin-bottom: 16px;
   justify-content: space-between;
 }
-input[type=text], select {
+input, select, button {
   height: 1.5rem;
+  width: 150px;
+  margin: 8px 8px 8px 0;
 }
 button {
   color: crimson;
   background-color: white;
-  height: 2rem;
-  width: 6rem;
-  border-radius: 8px;
   border: 1px solid crimson;
 
   &:disabled {
     cursor: not-allowed;
     color: darkgray;
-    border-color: darkgray;;
+    border-color: darkgray;
   }
+}
+.submit {
+  display: flex;
+  justify-content: flex-end;
 }
